refactor: Improve generating documents architecture to be more consistent with rest of the project.
